src/deploy/kubernetes/infra/old/monitoring/grafana/application/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-ip-service
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /metrics
      prometheus.io/port:   '3000'
spec:
  selector:
    component: grafana
  type: ClusterIP #NodePort
  ports:
  - port: 3000
    targetPort: 3000
#    nodePort: 30000
